--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -203,6 +203,7 @@ body {
   color: hsla(0, 0%, 0%, 0.8);
   font-family: Arial, Helvetica, sans-serif;
   font-weight: normal;
+  font-size: 14px;
   word-wrap: break-word;
   font-kerning: normal;
   -moz-font-feature-settings: "kern", "liga", "clig", "calt";
